--- a/loginpage1.html
+++ b/loginpage1.html
@@ -2,7 +2,7 @@
 <head>
 <title>Registration Form</title>
 </head>
-<body bgcolor="gree"n>
+<body bgcolor="green">
 <center>
  <h2>Registration Form</h2>
 <bg color="blue">
